--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,8 @@
   --gray: #6c757d;
   --gray-dark: #343a40;
   --primary: #64a19d;
-  --secondary: #6c757d;
+  /*--secondary: #6c757d; */
+  --secondary: #ffffff;
   --success: #28a745;
   --info: #17a2b8;
   --warning: #ffc107;
